--- a/project code/Dockerfile
+++ b/project code/Dockerfile
@@ -9,16 +9,17 @@ FROM python:3.9
 # The first parameter 'Sensors.py' is the name of the file on the host.
 # The second parameter '/' is the path where to put the file on the image.
 # Here we put the file at the image root folder.
+COPY requirements.txt .
+RUN pip install --upgrade pip
+RUN pip3 install -r requirements.txt
+RUN sudo apt install -y python3-picamera2
 COPY hal ./hal
 COPY Sensors.py .
 COPY main.py .
 COPY Notification.py .
-COPY requirements.txt .
 COPY labels.txt .
 COPY model_unquant.tflite .
 
-RUN pip3 install -r requirements.txt
-RUN sudo apt install -y python3-picamera2
 
 # We need to define the command to launch when we are going to run the image.
 # We use the keyword 'CMD' to do that.
